@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.66 2005/02/01 05:28:02 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.67 2005/02/05 03:38:12 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  01 Feb 2005; John Laliberte <allanonl@bu.edu>
+  ExtraPackages.py - Added class Details.  Large portions updated so
+  that there is now a tree structure of packages associated with each
+  section and category. Many visual changes to the screen.
 
   31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed vertical spacing for install steps. Removed "Install" activation
